--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,12 @@ before_script:
   - echo "deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-4.0 main" | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update -qq
   - sudo apt-get install clang-4.0 -y
-  - sudo ln -s /usr/bin/llvm-config-4.0 /usr/bin/llvm-config
-  - sudo ln -s /usr/bin/clang-4.0 /usr/bin/clang
-  - sudo ln -s /usr/bin/clang++-4.0 /usr/bin/clang++
+
+env:
+  global:
+    - LLVM_CONFIG=/usr/bin/llvm-config-4.0
+    - CC=/usr/bin/clang-4.0
+    - CXX=/usr/bin/clang++-4.0
 
 compiler:
   - gcc
