--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_script:
   - curl http://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
   - echo "deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-4.0 main" | sudo tee -a /etc/apt/sources.list
   - sudo apt-get update -qq
-  - sudo apt-get install clang-4.0 -y
+  - sudo apt-get install clang-4.0 python-dev -y
 
 before_install:
     - export CC=/usr/bin/clang-4.0
@@ -16,5 +16,8 @@ before_install:
 env:
   global:
     - LLVM_CONFIG=/usr/bin/llvm-config-4.0
+  matrix:
+    - DUMMY_VAR=1
+    - CFLAGS="-DUSE_PYTHON -I/usr/include/python2.7/" CXXFLAGS="-DUSE_PYTHON -I/usr/include/python2.7/" LDFLAGS="-lpython2.7"
 
 script: make ci
