WIP patches for several new features. Don't use

--- a/llvm_mode/Makefile
+++ b/llvm_mode/Makefile
@@ -101,6 +101,8 @@ test_build: $(PROGS)
 	@rm -f test-instr
 	@cmp -s .test-instr0 .test-instr1; DR="$$?"; rm -f .test-instr0 .test-instr1; if [ "$$DR" = "0" ]; then echo; echo "Oops, the instrumentation does not seem to be behaving correctly!"; echo; echo "Please ping <lcamtuf@google.com> to troubleshoot the issue."; echo; exit 1; fi
 	@echo "[+] All right, the instrumentation seems to be working!"
+	@rm -f *.covmap
+	unset AFL_USE_ASAN AFL_USE_MSAN AFL_INST_RATIO; AFL_QUIET=1 AFL_PATH=. AFL_CC=$(CC) AFL_WRITE_COVERAGE_MAP=1 ../afl-clang-fast $(CFLAGS) ../test-instr-func.c -o test-instr-func $(LDFLAGS)
 
 all_done: test_build
 	@echo "[+] All done! You can now use '../afl-clang-fast' to compile programs."
